# robotics-practical

./: .gitignore  README.md
exercise1/ros2_ws/src/simple_motion/: CMakeLists.txt  package.xml
exercise1/ros2_ws/src/simple_motion/src/: simple_odometry.cpp  simple_time.cpp
exercise2/online_statistics/: online_statistics.cpp  online_statistics.hpp
exercise2/ros2_ws/src/simple_laser/: CMakeLists.txt  package.xml
exercise2/ros2_ws/src/simple_laser/include/online_statistics/: online_statistics.h  online_statistics.hpp
exercise2/ros2_ws/src/simple_laser/src/: online_statistics.cpp  simple_scan.cpp
exercise2/ros2_ws/src/simple_laser/src/online_statistics/: online_statistics.cpp
exercise2/simple_laser/: CMakeLists.txt  package.xml
exercise2/simple_laser/src/: online_statistics.cpp  simple_scan.cpp
exercise3/ros_ws/src/obstacle_avoidance/: CMakeLists.txt  package.xml
exercise3/ros_ws/src/obstacle_avoidance/include/: vec2.h
exercise3/ros_ws/src/obstacle_avoidance/include/obstacle_avoidance/: obstacle_avoidance.h
exercise3/ros_ws/src/obstacle_avoidance/include/potential_field/: potential_field.h
exercise3/ros_ws/src/obstacle_avoidance/launch/: obstacle_avoidance.launch.py
exercise3/ros_ws/src/obstacle_avoidance/src/: main.cpp
exercise3/ros_ws/src/obstacle_avoidance/src/obstacle_avoidance/: obstacle_avoidance.cpp
exercise3/ros_ws/src/obstacle_avoidance/src/potential_field/: potential_field.cpp
exercise4/ball_tracking/: CMakeLists.txt  package.xml
exercise4/ball_tracking/launch/: ball_tracking.launch
exercise4/ball_tracking/src/: ball_tracker.cpp  main.cpp
exercise4/ball_tracking_template/ball_tracking/: CMakeLists.txt  package.xml
exercise4/ball_tracking_template/ball_tracking/src/: ball_tracker.cpp  main.cpp
exercise4/kinect_bag_files/moving_balls/: metadata.yaml
exercise4/kinect_bag_files/static_balls/: metadata.yaml
exercise4/ros_ws/src/ball_tracking/: CMakeLists.txt  package.xml
exercise4/ros_ws/src/ball_tracking/include/ball_tracker/: ball_tracker.h
exercise4/ros_ws/src/ball_tracking/launch/: ball_tracking.launch
exercise4/ros_ws/src/ball_tracking/src/: main.cpp
exercise4/ros_ws/src/ball_tracking/src/ball_tracker/: ball_tracker.cpp
